Fix tab nav text wrap on ios

--- a/src/css/component/_tab_navigation.scss
+++ b/src/css/component/_tab_navigation.scss
@@ -19,6 +19,7 @@
 .tab_navigation__item {
   margin: 0;
   text-wrap: nowrap;
+  white-space: nowrap;
   padding: 0.75rem 0.5rem;
   border-radius: var(--tab-spacing) var(--tab-spacing) 0 0;
   @include typography-h280;
